# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  Chess.sln  Makefile  MakefileWin  README.md
Graphics/: Graphics.vcxproj  Graphics.vcxproj.filters
Graphics/inc/: g_input.hpp  g_render.hpp  game.hpp  player_bot.hpp  player_real.hpp
Graphics/src/: game.cpp  input.cpp  main.cpp  menu.cpp  player.cpp  player_bot.cpp  player_real.cpp  render.cpp
Logic/: Logic.vcxproj  Logic.vcxproj.filters
Logic/inc/: board.hpp  chess.hpp  definitions.hpp  factory.hpp  figure.hpp  game.hpp  gamestate.hpp  input.hpp  logic.hpp  move.hpp  observer.hpp  player.hpp  position.hpp  render.hpp  strategy.hpp
Logic/src/base/: board.cpp  factory.cpp  figure.cpp  game.cpp  gamestate.cpp  logic.cpp  move.cpp  observer.cpp  player.cpp  position.cpp
Logic/src/strategies/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp
Terminal/: Terminal.vcxproj  Terminal.vcxproj.filters
Terminal/inc/: c_input.hpp  c_render.hpp
Terminal/src/: render.cpp
Tests/: Tests.vcxproj  Tests.vcxproj.filters
Tests/inc/: file_factory.hpp  t_input.hpp  t_render.hpp  tests.hpp
Tests/src/: input.cpp  render.cpp
Tests/tests/: 00.txt  01.txt
graphics/: CMakeLists.txt  game.cpp  game.hpp  menu.cpp  player_bot.cpp  player_bot.hpp  player_real.cpp  player_real.hpp
graphics/inc/: game.hpp  player_base.hpp  player_bot.hpp  player_real.hpp
graphics/src/: game.cpp  menu.cpp  player_bot.cpp  player_real.cpp  render.cpp
graphics0/inc/: game.hpp
graphics0/src/: game.cpp  main.cpp  menu.cpp  player_bot.cpp  player_real.cpp  render.cpp
inc/: player_base.hpp
logic/: CMakeLists.txt  Logic.vcxproj.filters  board.cpp  board.hpp  chess.hpp  definitions.hpp  factory.cpp  figure.cpp  figure.hpp  figure_bishop.cpp  figure_bishop.hpp  figure_king.cpp  figure_king.hpp  figure_knight.cpp  figure_knight.hpp  figure_pawn.cpp  figure_pawn.hpp  figure_queen.cpp  figure_queen.hpp  figure_rook.cpp  figure_rook.hpp  gamestate.cpp  gamestate.hpp  logic.cpp  logic.hpp  object.hpp  player.cpp  player.hpp  position.hpp  strategy.hpp  strategy_queen.cpp  strategy_rook.cpp
logic/inc/: board.hpp  definitions.hpp  factory.hpp  figure.hpp  figure_bishop.hpp  figure_king.hpp  figure_knight.hpp  figure_pawn.hpp  figure_queen.hpp  figure_rook.hpp  game.hpp  gamestate.hpp  input.hpp  logic.hpp  move.hpp  observer.hpp  player.hpp  position.hpp  render.hpp  strategy.hpp
logic/include/: figure.hpp  figure_king.hpp  figure_pawn.hpp  figure_queen.hpp  logic.hpp  move.hpp  observer.hpp
logic/src/: board.cpp  figure.cpp  figure_bishop.cpp  figure_king.cpp  figure_knight.cpp  figure_pawn.cpp  figure_queen.cpp  figure_rook.cpp  logic.cpp  move.cpp  player.cpp  position.cpp
logic/src/base/: board.cpp  factory.cpp  figure.cpp  game.cpp  gamestate.cpp  logic.cpp  move.cpp  observer.cpp  position.cpp
logic0/inc/: board.hpp
src/: main.cpp  menu.cpp  player_base.cpp  player_real.cpp  render.cpp
terminal/inc/: c_render.hpp
terminal/src/: render.cpp
terminal0/src/: input.cpp  main.cpp  render.cpp
tests/: Tests.vcxproj  Tests.vcxproj.filters
tests/inc/: file_factory.hpp  t_render.hpp  tests.hpp
tests/include/: test_runner.hpp  tests.hpp
tests/src/: file_factory.cpp  input.cpp  render.cpp  tests.cpp
tests0/inc/: tests.hpp
tests0/src/: file_factory.cpp  render.cpp  tests.cpp
view/inc/: c_input.hpp  c_render.hpp
(+14 files in other folders)
